  * Templates can now be copied
    * Note: Tags and owners aren't copied to new templates
  * Generating a new group from a template now requires the project to be specified to limit the number of templates that are displayed
  * Cleaned up lists of stickies by changing how they expand when clicking on them
  * Default application name is now added to the from: field for emails

* Refactoring
  * Comments no longer use class_name or class_id and now require to be part of a sticky_id
  * Removed unused project position
  * Stickies no longer have a status, or due_at columns
    * Note: due_date includes the due_at time along with timezone information
  * Consistent sorting and display of model counts used across all objects, (projects, stickies, tags, templates, users, etc)

* Bug Fix
  * Creating a tag with the same name as a deleted tag no longer throws the error 'tag name has already been taken' (by LisaM)
  * Clicking on 'Days Left' no longer triggers an AJAX pagination request

== 0.22.5

* Enhancements
  * Creating a sticky from the project page will
    * default the new sticky to the currently selected frame
    * refresh the list of stickies when the sticky is created
  * Switching frames in the sticky popup will now reflect on the underlying project page
  * Update to Rails 3.2.6 and Contour 1.0.2
  * Links with confirm: now use data: { confirm: } to account for deprecations in Rails 4.0
  * Frames are now ordered by end date descending by default on frames index

* Bug Fix
  * Links from email to stickies past due, due today, or upcoming now properly reset other filters

== 0.22.4

* Enhancements
  * Update to Rails 3.2.5 and Contour 1.0.1
  * Updated Devise configuration files for devise 2.1.0

* Bug Fix
  * Timeouts no longer cause an error when trying to login again
  * Creating a group without specifying a template now correctly highlights an error on the required template name field

== 0.22.3

* Enhancements