@@ -9,6 +9,7 @@
   * Generating a new group from a template now requires the project to be specified to limit the number of templates that are displayed
   * Cleaned up lists of stickies by changing how they expand when clicking on them
   * Default application name is now added to the from: field for emails
+  * Email subjects no longer include the application name
 
 * Refactoring
   * Comments no longer use class_name or class_id and now require to be part of a sticky_id
